# FastApiTutorial

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
app/: app.py  db.py  schemas.py
backend/: alembic.ini
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: __init__.py  ai.py  auth.py  chat.py  expenses.py  health.py  notes.py  users.py
backend/app/core/: config.py  logging.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  chat.py  expense.py  note.py  pdf_document.py  user.py
backend/app/schemas/: __init__.py  ai.py  chat.py  expense.py  note.py  token.py  user.py
backend/app/services/: ai.py  auth.py  files.py
backend/app/tasks/: ai_tasks.py  celery_app.py
backend/app/utils/: dependencies.py  exceptions.py  response.py
backend/app/websocket/: ai_socket.py
backend/tests/: test_health.py
